<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    tools:context=".features.HomePage">
    <!--    //TODO: Add Drawable Icons-->


    <androidx.constraintlayout.widget.ConstraintLayout

        android:id="@+id/relativeLayout2"
        android:layout_width="379dp"
        android:layout_height="641dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:paddingHorizontal="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/pageLogo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/imgLogo"
            android:src="@drawable/logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtWelcome"
            style="@style/title_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="Welcome"
            app:layout_constraintStart_toEndOf="@id/pageLogo"
            app:layout_constraintTop_toTopOf="@id/pageLogo" />


        <TextView
            android:id="@+id/tvFullName"
            style="@style/normal_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="John Smith"
            android:textSize="25sp"
            app:layout_constraintStart_toEndOf="@id/pageLogo"
            app:layout_constraintStart_toStartOf="@id/txtWelcome"
            app:layout_constraintTop_toBottomOf="@id/txtWelcome" />

        <Button
            android:id="@+id/btnBuy"
            style="@style/button_style_gray"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="68dp"
            android:gravity="center"
            android:text="@string/txtHomeBuy"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvFullName" />

        <Button
            android:id="@+id/btnSell"
            style="@style/button_style_gray"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:text="@string/txtHomeSell"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnBuy" />

        <Button
            android:id="@+id/btnEditPostedItems"
            style="@style/button_style_gray"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/btnEditItems"
            app:layout_constraintHorizontal_bias="0.507"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnSell" />

        <Button
            android:id="@+id/btnTransactions"
            style="@style/button_style_gray"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:gravity="center"
            android:text="@string/btnTransactions"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnSell" />

        <Button
            android:id="@+id/btnUpdate"
            style="@style/button_style_gray"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:gravity="center"
            android:text="@string/txtHomeUpdate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnTransactions" />

        <Button
            android:id="@+id/btnLogout"
            style="@style/button_style_gray"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:text="@string/txtHomeLogout"
            app:layout_constraintHorizontal_bias="0.507"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnUpdate" />

        <Button
            android:id="@+id/btnStatusOrder"
            style="@style/button_style_gray"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:gravity="center"
            android:text="@string/btnViewOrderStatus"
            app:layout_constraintBottom_toBottomOf="@id/btnTransactions"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/btnEditPostedItems"
            app:layout_constraintVertical_bias="0.015" />


        <ImageView
            android:id="@+id/notification"
            android:layout_width="65dp"
            android:layout_height="63dp"
            android:layout_marginStart="3dp"
            android:contentDescription="@string/str_noti"
            android:onClick="clickNotification"
            app:layout_constraintBottom_toTopOf="@+id/tvFullName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txtWelcome"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/purchased_notification" />

        <FrameLayout
            android:id="@+id/fragmentViewer"
            android:layout_width="485dp"
            android:layout_height="466dp"
            android:layout_marginTop="232dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/notification"
            app:layout_constraintVertical_bias="0.0">

        </FrameLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>

