<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.TransactionDetailsPage">

    <ImageView
        android:id="@+id/ivItemImage_Transaction"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="64dp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/btnSendNotification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="124dp"
        android:layout_marginTop="304dp"
        android:text="@string/btnSendNotification"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivItemImage_Transaction" />

    <TextView
        android:id="@+id/tvItemName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="108dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toEndOf="@+id/tvItemNameLabel"
        app:layout_constraintTop_toBottomOf="@+id/tvBuyerName" />

    <TextView
        android:id="@+id/tvItemPriceLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="20dp"
        android:text="@string/tvItemPriceLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvItemNameLabel" />

    <TextView
        android:id="@+id/tvItemStatusLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="20dp"
        android:text="@string/tvItemStatusLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvItemPriceLabel" />

    <TextView
        android:id="@+id/tvBuyerNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="60dp"
        android:text="@string/tvBuyerNameLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivItemImage_Transaction" />

    <TextView
        android:id="@+id/tvTransactionStatusLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="20dp"
        android:text="@string/tvTransactionStatus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvItemStatusLabel" />

    <TextView
        android:id="@+id/tvItemNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="20dp"
        android:text="@string/tvItemNameLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvBuyerNameLabel" />

    <TextView
        android:id="@+id/tvItemPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="112dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toEndOf="@+id/tvItemPriceLabel"
        app:layout_constraintTop_toBottomOf="@+id/tvItemName" />

    <TextView
        android:id="@+id/tvPickUpDelivery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toEndOf="@+id/tvItemStatusLabel"
        app:layout_constraintTop_toBottomOf="@+id/tvItemPrice" />

    <TextView
        android:id="@+id/tvItemStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="136dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toEndOf="@+id/tvTransactionStatusLabel"
        app:layout_constraintTop_toBottomOf="@+id/tvPickUpDelivery" />

    <TextView
        android:id="@+id/tvBuyerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="60dp"
        app:layout_constraintStart_toEndOf="@+id/tvBuyerNameLabel"
        app:layout_constraintTop_toBottomOf="@+id/ivItemImage_Transaction" />

    <TextView
        android:id="@+id/tvTransactionIdLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="81dp"
        android:layout_marginTop="25dp"
        android:text="@string/tvTransactionIdLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivItemImage_Transaction" />

    <TextView
        android:id="@+id/tvTransactionId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="82dp"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toEndOf="@+id/tvTransactionIdLabel"
        app:layout_constraintTop_toBottomOf="@+id/ivItemImage_Transaction" />

</androidx.constraintlayout.widget.ConstraintLayout>